# 3-SAT-solver

./: 3-SAT-solver.cpp  CMakeLists.txt  README.md  generate.py  test.py
3-SAT-solver/: 3-SAT-solver.cpp  CMakeLists.txt  input.cpp  input.hpp  output.cpp  output.hpp  solver.cpp  solver.hpp  verifier.cpp  verifier.hpp
input/: sample.txt
test/: 3SATtest.cc  CMakeLists.txt
